fixes updated heatmap

--- a/doc/presentation/main.tex
+++ b/doc/presentation/main.tex
@@ -1,11 +1,12 @@
 %Micah Chambers
 
 \documentclass{beamer}
+\documentclass[handout,dvips,11pt,gray]{beamer}
 %\usepackage[orientation=landscape,size=custom,width=16,height=10,scale=0.5]{beamerposter} 
 
 \usepackage{pgfpages}
 %\setbeameroption{show notes on second screen}
-\setbeameroption{show notes}
+\setbeameroption{show only notes}
 
 \mode<presentation>
 {
@@ -144,7 +145,7 @@ using Particle Filters}
 \section{Backup}
 \begin{frame}{Balloon Flowchart}
 \begin{figure}
-\includegraphics[width=\textwidth]{backup_balloon}
+%\includegraphics[width=\textwidth]{backup_balloon}
 \end{figure}
 \end{frame}
 
