--- a/doc/presentation/results.tex
+++ b/doc/presentation/results.tex
@@ -137,7 +137,7 @@ $\tau_0$ & $\alpha$ & $E_0$    & $V_0$    & $\tau_s$ & $\tau_f$ & $\epsilon$  & 
 \centering
 \subfigure[Regions]{\includegraphics[height=.46\textheight]{simregions}}
 \subfigure[Mutual Information]
-{\includegraphics[height=.46\textheight]{sim_hm_15_6}}
+{\includegraphics[height=.46\textheight]{sim_hm_all}}
 \subfigure[SNR]{\includegraphics[height=.46\textheight]{snr_hm}}
 \end{figure}
 \note{
