--- a/doc/presentation/nonlinear.tex
+++ b/doc/presentation/nonlinear.tex
@@ -234,7 +234,7 @@
 \begin{column}{.54\textwidth}
 \begin{itemize}
     \item Mixture PDF, with $N_p$ particles:
-        $$P(x_k) = \sum_{i=0}^{N_p} w_k^i\delta(x_k - x^i_k ) dx$$
+        $$P(x_k) = \sum_{i=0}^{N_p} w_k^i\delta(x_k - x^i_k )$$
     \item Weight Definition:
         $$w^i_k \propto \frac{P(x^i_{0:k} | y_{0:k})}{q(x^i_{0:k} | y_{0:k})}$$
     \item Incorporating Measurement $y_k$:
