--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -193,9 +193,12 @@ List of Acronyms
 \acro{CBF}{Cerebral Blood Flow}
 \acro{CBV}{Cerebral Blood Volume}
 \acro{CMRO2}{Cerebral Metabolic Rate of Oxygen}
+\acro{DC}{Direct Current}
 \acro{dHb}{Deoxygenated Hemoglobin}
+\acro{EM}{Expectation-Maximization}
 \acro{EPI}{Echo Planar Imaging}
 \acro{fMRI}{Functional Magnetic Resonance Imaging}
+\acro{GA}{Genetic Algorithms}
 \acro{GLM}{General Linear Model}
 \acro{HRF}{Hemodynamic Response Function}
 \acro{Hb}{Hemoglobin}
@@ -203,11 +206,13 @@ List of Acronyms
 \acro{MRI}{Magnetic Resonance Imaging}
 \acro{O2Hb}{Oxygenated Hemoglobin}
 \acro{RF}{Radio Frequency}
+\acro{SA}{Simulated Annealing}
 \acro{SNR}{Signal-to-Noise Ratio}
 \acro{SPM}{Statistical Parametric Mapping}
 \acro{T1}{Longitudinal}
 \acro{T2}{Spin-Spin}
 \acro{TR}{Repetition Time}
+\acro{UKF}{Unscented Kalman Filter}
 \end{acronym}
 \pagebreak
 
